--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,13 @@ DB_DATABASE=mie_levelup
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_CONNECTION=mysql
+DB_HOST=gsgpm1008.siteground.biz
+DB_PORT=3306
+DB_DATABASE=db2dnrkn6qbdk5
+DB_USERNAME=uxr8vw374jvp2
+DB_PASSWORD=f6x22msaazdg
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
